apps/livesync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livesync
  namespace: livesync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livesync
  template:
    metadata:
      labels:
        app: livesync
    spec:
      containers:
      - env:
        - name: COUCHDB_USER
          value: admin
        - name: COUCHDB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: livesync-couchdb-secret
        - name: ERL_FLAGS
          value: -setcookie monster
        image: couchdb:3.3
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 5984
          initialDelaySeconds: 30
          periodSeconds: 10
        name: livesync
        ports:
        - containerPort: 5984
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        volumeMounts:
        - mountPath: /opt/couchdb/data
          name: data
        - mountPath: /opt/couchdb/etc/local.d
          name: config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: livesync-data
      - emptyDir: {}
        name: config
