apps/livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livesync
  namespace: livesync
spec:
  selector:
    app: livesync
  ports:
  - port: 5984
    targetPort: 5984
