apps/livesync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livesync
  namespace: livesync
spec:
  ingressClassName: nginx
  rules:
    - host: livesync.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livesync
                port:
                  number: 5984
